zxing优化